2008-11-19  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/mb/hd-app.c, src/mb/hd-theme.c: Patch from Laszlo Pere to fix
	the long press handling for the Back button on stackable window.

2008-11-19  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-switcher.c:
	  Ungrab the pointer when hd_swticher_something_removed() and the
	  switcher has become empty, thus leaving it.  Fixes one case of
	  making applications unresponsive to touchscreen events after
	  leaving the switcher.
	* src/home/hd-task-navigator.c:
	  Don't allow interactions with the thumbnails while animation is
	  in progress.  Fixes the weirdness you could observe by tapping
	  the same or another thumbnail while zooming and a crash when
	  you tried to close the zooming thumbnail.
	* TODO:
	  Removed done todos.

2008-11-18  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.c:
	  Dont't give system-modal dialogs to the switcher.

2008-11-18  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Show open dialogs in the applications' thumbnail in switcher view.
	Switch to the application if it opens a confirmation note.

	* src/mb/hd-comp-mgr.c:
	  Add/remove dialogs and confirmation notes to the switcher
	  on map/unregister.
	* src/home/hd-switcher.c
	* src/home/hd-task-navigator.c
	* src/home/hd-switcher.h
	* src/home/hd-task-navigator.h

2008-11-18  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.6

	* src/mb/hd-comp-mgr.c, src/mb/hd-theme.c: Patch from Laszlo Pere to
	make stackable windows better supported. Fixes: NB#87040

2008-11-17  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/home/hd-task-navigator.c:
	  Show the correct (wrt stacking) and up-to-date window title in
	  the thumbnails in switcher view.
	* TODO:
	  Added and removed switcher todos.

2008-11-17  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Show the last frame of a paused video in switcher view.

	* src/home/hd-task-navigator.c:
	  * pixbuf2texture(): Be more robust and check the input pixbuf.